# sb3tab

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ja.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  partitions.csv  sdkconfig.defaults
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
components/scratch_core/: CMakeLists.txt
components/scratch_core/source/: audio.hpp  image.cpp  image.hpp  render.cpp
components/scratch_core/source/audio/esp32/: audio.cpp
components/scratch_core/source/renderers/headless/: headless_fb.cpp  headless_fb.hpp  render.cpp  speech_manager_headless.cpp  speech_manager_headless.hpp  speech_text_headless.cpp  speech_text_headless.hpp  text_headless.cpp
components/scratch_core/source/runtime/: blockExecutor.cpp  blockExecutor.hpp  collision.cpp  collision.hpp  math.cpp  parser.cpp  runtime.cpp  sprite.hpp  unzip.cpp  value.cpp
components/scratch_core/source/runtime/blocks/: blockUtils.cpp  blockUtils.hpp  control.cpp  events.cpp  looks.cpp  makeymakey.cpp  motion.cpp  procedures.cpp  sensing.cpp  text2speech.cpp
components/scratch_core/source/windowing/headless/: input.cpp
docs/ui_mockups/: logo.png~
licenses/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  battery_monitor.cpp  battery_monitor.h  camera_qr.cpp  camera_qr.h  dsi_display.cpp  dsi_display.h  dsi_modal.cpp  dsi_modal.h  es8388_audio.cpp  es8388_audio.h  esp_lcd_st7123.c  esp_lcd_st7123.h  gamepad.cpp  gamepad.h  i18n.cpp  i18n.h  idf_component.yml  input_device.cpp  input_device.h  input_gpio.cpp  input_gpio.h  input_usb.cpp  input_usb.h  input_xbox.cpp  input_xbox.h  lcd_driver.cpp  lcd_driver.h  main.cpp  nanosvg.h  sd_storage.cpp  sd_storage.h  sw_renderer.cpp  sw_renderer.h  test_main.cpp  time_sync.cpp  time_sync.h  touch_input.cpp  touch_input.h  (+4 more)
main/assets_gen/: ui_icon_new.c  ui_icon_play.c  ui_icon_settings.c  ui_logo.c
slave/main/: coprocessor_fw_version.h
tools/: gen_qr.py  png_to_lvgl.py  send_sb3.py  subset_font.py
tools/chrome-extension/: README.ja.md  README.md  manifest.json  popup.html  popup.js
tools/s3_lcd_test/: CMakeLists.txt
tools/s3_lcd_test/main/: CMakeLists.txt  main.cpp
